--- a/style/device.css
+++ b/style/device.css
@@ -20,11 +20,15 @@ body {
   background-repeat: no-repeat;
   background-position: top center; */
   font-family: "Open Sans";
+  counter-reset: section;
 }
 
 a {
   text-decoration: none;
   color: #000;
+}
+button:focus {
+  outline: none;
 }
 
 .logo {
@@ -32,6 +36,12 @@ a {
   top: 0;
   transform: translateY(-50%);
   border: 0;
+}
+.logo:hover {
+  opacity: 60%;
+}
+.logo:active {
+  opacity: 30%;
 }
 
 .container {
@@ -41,13 +51,23 @@ a {
 }
 
 .main {
-  height: 299px;
-  background-color: #f8e295;
   position: relative;
   margin-top: 40px;
   padding-top: 47px;
   padding-left: 59px;
   padding-right: 50px;
+  z-index: 1;
+}
+.main::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  display: block;
+  height: 299px;
+  background-color: #f8e295;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .menu {
@@ -73,17 +93,26 @@ a {
   font-weight: 300;
   font-style: normal;
 }
+.input__field:hover {
+  opacity: 60%;
+}
+.input__field:focus {
+  outline: none;
+}
 
 .btn__icon {
   vertical-align: middle;
 }
-
 .btn__text {
   padding-left: 10px;
   font-family: "Open Sans";
   font-weight: 300;
   font-style: normal;
   font-size: 15px;
+  border: 0;
+}
+.btn__text:hover {
+  opacity: 60%;
 }
 
 .link {
@@ -98,28 +127,11 @@ a {
   font-weight: bold;
   text-align: center;
 }
-
-.submenu {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-wrap: wrap;
+.link:hover {
+  opacity: 60%;
 }
-
-.submenu__link:last-child {
-  justify-content: flex-start;
-}
-
-.submenu__item {
-  height: 30px;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.submenu__link {
-  font-family: "Open Sans";
-  font-weight: 300;
+.link:active {
+  opacity: 30%;
 }
 
 .menu__cell {
@@ -173,8 +185,27 @@ a {
   pointer-events: all;
 }
 
+.submenu__link:last-child {
+  justify-content: flex-start;
+}
+
+.submenu__item {
+  height: 30px;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.submenu__link {
+  font-family: "Open Sans";
+  font-weight: 300;
+}
+.submenu__link:hover {
+  opacity: 60%;
+}
+.submenu__link:active {
+  opacity: 30%;
+}
 .submenu {
-  /* outline: #000 1px solid; */
   position: absolute;
   margin: 0;
   padding: 0;
@@ -187,6 +218,8 @@ a {
   pointer-events: none;
   transition: 0.5s;
   z-index: 5;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .submenu__items:first-child {
@@ -208,15 +241,6 @@ a {
   display: flex;
 }
 
-.slider__img:last-child {
-  padding-left: 0;
-  padding-top: 30px;
-}
-
-.slider__img {
-  padding-left: 30px;
-}
-
 .slider__wrapper {
   width: 50%;
 }
@@ -224,9 +248,10 @@ a {
 .slider__item {
   padding-top: 50px;
   position: relative;
+  counter-reset: heading;
 }
 
-.slider__item::before {
+.slider__item::after {
   content: "";
   position: absolute;
   width: 100px;
@@ -236,8 +261,7 @@ a {
   left: 15px;
 }
 
-.slider__item::after {
-  content: "01";
+.slider__counter {
   position: absolute;
   font-size: 150px;
   color: rgb(255, 255, 255);
@@ -246,6 +270,7 @@ a {
   right: 0;
   top: 15px;
   transform: translateY(-50px);
+  z-index: -1;
 }
 
 .slider__title {
@@ -293,10 +318,21 @@ a {
   z-index: -1;
 }
 
-.slider__btn {
-  top: 50px;
-  position: relative;
-  left: 190px;
+.slider__dots {
+  position: absolute;
+  right: 100px;
+  top: 510px;
+}
+.dot {
+  cursor: pointer;
+  height: 12px;
+  width: 12px;
+  margin: 0 2px;
+  background-color: rgb(253, 253, 253);
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  border: 1px solid black;
 }
 
 .slider__feature {
@@ -305,6 +341,15 @@ a {
   top: 105px;
   justify-content: space-between;
   width: 400px;
+}
+.slider__img {
+  width: 526px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  padding: 7px;
 }
 
 .feature__title {
@@ -323,27 +368,11 @@ a {
   font-size: 12px;
   font-weight: 300;
 }
-/* input[type="radio"]:checked::after {
-  content:'';
-  background-color: #d1d3d1;
-} */
-/* 
-input[type="radio"]:after {
-  background-color: #000000;
-  content: "";
-}
 
-input[type="radio"]:checked:after {
-  background-color: #000000;
-  content: "";
-} */
 .popular {
-  width: 1160px;
-  position: relative;
-  top: 480px;
   display: flex;
   justify-content: space-between;
-  left: 140px;
+  padding-top: 90px;
 }
 .popular__img {
   background-color: #f8e295;
@@ -352,6 +381,13 @@ input[type="radio"]:checked:after {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.popular__img:hover {
+  background-color: #f0c52e;
+}
+.popular__img:active {
+  background-color: #f0c52e;
+  opacity: 30%;
 }
 .img__centre {
   margin: 0;
@@ -362,57 +398,48 @@ input[type="radio"]:checked:after {
   font-family: "Open Sans";
   font-size: 18px;
 }
-.services {
+
+.tab {
   position: relative;
-  /* background-color: aquamarine; */
-  top: 544px;
-  left: 140px;
-  height: 320px;
-  width: 1160px;
+  z-index: 1;
+  top: 65px;
 }
-.tabs__wrapper {
-  position: relative;
-  display: flex;
-  height: 100%;
-}
-.tabs__wrapper::after {
+.tab::after {
   position: absolute;
   background-color: #e5e5e5;
-  content: "";
   height: 288px;
-  top: 240px;
+  content: "";
+  left: 0;
+  right: 0;
+  top: 100px;
   width: 100%;
-  transform: translateY(-50%);
+  z-index: -1;
 }
-.tabs__container {
+.tab__wrapper {
+  height: 319px;
   display: flex;
+  border: 1px solid rgb(177, 75, 75);
+}
+
+.tab__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  width: 385px;
-  justify-content: space-evenly;
+  width: 434px;
+  background-color: none;
 }
-.content {
-  display: none;
-  padding: 20px;
-  width: 100%;
-  border-left: black solid 7px;
-  z-index: 1;
-}
-.tab {
-  width: 160px;
-  z-index: 1;
+.tab__links {
   position: relative;
-  text-transform: uppercase;
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  color: #000;
-  font-family: "Open Sans";
-  letter-spacing: 4px;
-  font-size: 17px;
-  font-weight: bold;
-  text-align: center;
+  padding: 22px 16px 22px 0;
+  width: 160px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s;
+  z-index: 1;
 }
-.tab::before {
+.tab__links::before {
   content: "";
   width: 160px;
   display: block;
@@ -422,22 +449,29 @@ input[type="radio"]:checked:after {
   top: 50%;
   transform: translateY(-50%);
   z-index: -1;
-  text-align: center;
 }
-.content:target {
-  display: block;
+
+.active {
+  background-color: rgb(0, 0, 0);
+  color: #f0c52e;
 }
-.content__tabs {
+
+.tab__content {
+  padding: 0px 12px;
+  border-left: 7px solid rgb(0, 0, 0);
   display: flex;
+  align-items: center;
+}
+.content {
   padding: 30px;
 }
-.tabs__title {
+.content__text_title {
   margin: 0;
   font-size: 42px;
   letter-spacing: 3px;
   font-family: "Open Sans";
 }
-.tabs__text {
+.content__text_paragraph {
   margin: 0;
   padding-top: 40px;
   font-family: "Open Sans";
