--- a/style/device.css
+++ b/style/device.css
@@ -284,9 +284,7 @@ button:focus {
   background-color: white;
   top: 20px;
 }
-.slider__cell:last-child::before {
-  counter-increment: slider;
-  content: "0" counter(slider);
+.slider__counter {
   position: absolute;
   font-size: 150px;
   color: rgb(255, 255, 255);
